# voxlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vox.c  vox.h  vox_atomic.c  vox_atomic.h  vox_backend.c  vox_backend.h  vox_crypto.c  vox_crypto.h  vox_daemon.c  vox_daemon.h  vox_dns.c  vox_dns.h  vox_dtls.c  vox_dtls.h  vox_epoll.c  vox_epoll.h  vox_file.c  vox_file.h  vox_fs.c  vox_fs.h  vox_handle.c  vox_handle.h  vox_htable.c  vox_htable.h  vox_ini.c  vox_ini.h  vox_iocp.c  vox_iocp.h  vox_json.c  vox_json.h  vox_kqueue.c  vox_kqueue.h  vox_kv_types.h  vox_list.h  vox_log.c  vox_log.h  (+47 more)
cert/: ca.crt  ca.key  generate_test_cert.bat  generate_test_cert.sh  generate_test_cert_with_ip.bat  generate_test_cert_with_ip.sh  server.crt  server.key
coroutine/: CMakeLists.txt  README.md  vox_coroutine.c  vox_coroutine.h  vox_coroutine_context.h  vox_coroutine_context_arm64.S  vox_coroutine_context_asm.c  vox_coroutine_context_win.c  vox_coroutine_context_x64.S  vox_coroutine_db.c  vox_coroutine_db.h  vox_coroutine_dns.c  vox_coroutine_dns.h  vox_coroutine_fs.c  vox_coroutine_fs.h  vox_coroutine_http.c  vox_coroutine_http.h  vox_coroutine_pool.c  vox_coroutine_pool.h  vox_coroutine_promise.c  vox_coroutine_promise.h  vox_coroutine_redis.c  vox_coroutine_redis.h  vox_coroutine_scheduler.c  vox_coroutine_scheduler.h  vox_coroutine_ws.c  vox_coroutine_ws.h
db/: CMakeLists.txt  README.md  vox_db.c  vox_db.h  vox_db_duckdb.c  vox_db_internal.h  vox_db_mysql.c  vox_db_pgsql.c  vox_db_pool.c  vox_db_pool.h  vox_db_sqlite3.c  vox_orm.c  vox_orm.h
examples/: atomic_example.c  client_perf_test.c  coroutine_clients_example.c  coroutine_pool_example.c  crypto_example.c  db_async_complex_example.c  db_async_complex_helper.h  db_async_loop_example.c  db_async_wait_example.c  db_async_worker_example.c  db_coroutine_example.c  db_example.c  db_orm_example.c  db_pool_async_example.c  db_pool_async_mysql_example.c  db_pool_async_pgsql_example.c  db_sync_example.c  dns_example.c  dtls_echo_test.c  file_example.c  fs_example.c  htable_example.c  http_client_example.c  http_middleware_example.c  http_parser_example.c  http_server_db_async_example.c  http_server_db_sync_example.c  http_server_example.c  http_server_multithread_example.c  https_server_example.c  ini_example.c  json_example.c  list_example.c  loop_example.c  loop_queue_work_example.c  mheap_example.c  mpool_benchmark.c  mpool_example.c  mqtt_client_example.c  mqtt_server_example.c  (+28 more)
http/: CMakeLists.txt  README.md  vox_http_client.c  vox_http_client.h  vox_http_context.c  vox_http_context.h  vox_http_engine.c  vox_http_engine.h  vox_http_gzip.c  vox_http_gzip.h  vox_http_internal.h  vox_http_middleware.c  vox_http_middleware.h  vox_http_mime.c  vox_http_mime.h  vox_http_multipart_parser.c  vox_http_multipart_parser.h  vox_http_parser.c  vox_http_parser.h  vox_http_router.c  vox_http_router.h  vox_http_server.c  vox_http_server.h  vox_http_ws.c  vox_http_ws.h
mqtt/: CMakeLists.txt  vox_mqtt_client.c  vox_mqtt_client.h  vox_mqtt_parser.c  vox_mqtt_parser.h  vox_mqtt_server.c  vox_mqtt_server.h
redis/: CMakeLists.txt  README.md  vox_redis_client.c  vox_redis_client.h  vox_redis_parser.c  vox_redis_parser.h  vox_redis_pool.c  vox_redis_pool.h
ssl/: CMakeLists.txt  README.md  vox_ssl.c  vox_ssl.h  vox_ssl_openssl.c  vox_ssl_openssl.h
tests/: test_atomic.c  test_crypto.c  test_db_duckdb.c  test_db_sqlite3.c  test_file.c  test_htable.c  test_http_middleware.c  test_http_parser_refactored.c  test_http_router.c  test_http_ws.c  test_json.c  test_log.c  test_main.c  test_mheap.c  test_mpool.c  test_mutex.c  test_process.c  test_queue.c  test_rbtree.c  test_redis.c  test_regex.c  test_runner.c  test_runner.h  test_scanner.c  test_socket.c  test_string.c  test_thread.c  test_time.c  test_toml.c  test_tpool.c  test_vector.c  test_xml.c
websocket/: CMakeLists.txt  README.md  vox_websocket.c  vox_websocket.h  vox_websocket_client.c  vox_websocket_client.h  vox_websocket_server.c  vox_websocket_server.h
